--- a/Models/TTS3_Vocoder/2024.08.13_VNet.md
+++ b/Models/TTS3_Vocoder/2024.08.13_VNet.md
@@ -47,6 +47,12 @@ GANs employ an adversarial training approach, where the generator and discrimina
 
 The loss function of a GAN typically encompasses both the generator and discriminator loss functions. However, various vocoder models employ distinct loss function designs and exhibit differences in the selection of similar loss terms, leading to training instability. For instance, Parallel WaveGAN incorporates cross-entropy loss into the generator loss to address instability issues, albeit without complete resolution \cite{c11}. MelGAN endeavors to enhance stability by replacing the cross-entropy loss with hinge loss and augmenting feature matching loss, yet gradient loss persists \cite{c13}. HiFiGAN introduces feature matching loss and Mel spectrogram loss to mitigate training instability \cite{c14}. Despite the inclusion of these additional loss functions, training may still encounter challenges such as gradient loss and pattern collapse, resulting in an unstable training process.
 
+This paper introduces VNet, a novel vocoder model capable of synthesizing high-fidelity speech in real time. A new discriminator module, named MTD, is proposed, which utilizes multiple linear spectrogram magnitudes computed with distinct sets of parameters. Operating on full-band Mel spectrogram data, MTD facilitates the generation of full-band and high-resolution signals. The overall discriminator integrates a Multi-Period Discriminator (MPD), leveraging multiple scales of waveforms to enhance speech synthesis performance by capturing both time and frequency domain characteristics \cite{c14}. To mitigate model training instability, an asymptotically constrained approach is proposed to modify the adversarial training loss function. This entails constraining the adversarial training loss within a defined range, ensuring stable training of the entire model. Our contributions can be summarized in three main aspects:
+
+- We propose VNet, a neural vocoder network for GAN-based speech synthesis that incorporates an MTD module to capture the features of speech signals from both time and frequency domains.
+- We propose an asymptotically constrained approach to modify the adversarial training loss of the generator and discriminator of the vocoder.
+- We demonstrate the effectiveness of the VNet model, as well as the effectiveness of the newly added MTD module and asymptotic constraints against training loss.
+
 ## 2.Related Works: 相关工作
 
 ## 3.Methodology: 方法
