--- a/Models/TTS3_Vocoder/2024.08.13_VNet.md
+++ b/Models/TTS3_Vocoder/2024.08.13_VNet.md
@@ -55,6 +55,10 @@ This paper introduces VNet, a novel vocoder model capable of synthesizing high-f
 
 ## 2.Related Works: 相关工作
 
+GANs have emerged as powerful generative models \cite{c12}. Initially applied to image generation tasks, GANs have garnered significant success and attention. Similarly, in the domain of speech synthesis, where traditional approaches primarily rely on rule-based or statistical models, GAN technology has gradually gained traction. By leveraging the adversarial framework of GANs, speech synthesis models can better capture the complexity and realism of speech signals, thereby producing more natural, high-quality synthesized speech. 
+
+WaveGAN simplifies speech synthesis by directly generating raw audio waveforms, producing high-quality and naturalistic speech segments. However, its training requires substantial data and computational resources. In contrast, Parallel WaveGAN extends single short-time Fourier transform (STFT) loss to multi-resolution, integrating it as an auxiliary loss for GAN training\cite{c11}. It may suffer from excessive smoothing. MelGAN achieves high-quality synthesis without additional distortion or perceptual losses by introducing a multi-scale discriminator (MSD) and incorporating hinge loss, feature matching loss, and discriminator loss\cite{c13}. HiFiGAN enhances the discriminator's ability to differentiate between generated and real audio and introduces a multi-receptive field fusion (MRF) module in the generator. Its loss functions include least squares loss, feature matching loss, Mel spectrogram loss, and discriminator loss\cite{c14,c22}. BigVGAN builds upon HiFiGAN by replacing the MSD with a multi-resolution discriminator (MRD) and introducing periodic activation into the generator. It proposes an anti-aliasing multi-periodicity composition (AMP) module for modeling complex audio waveforms. BigVGAN's loss functions comprise least squares adversarial loss, feature matching loss, and Mel spectrogram loss\cite{c15}.VNet distinguishes itself from these methods by simultaneously addressing the challenges of matching features at various resolutions and scales while also resolving the issue of poor fidelity results that arise from using full-band Mel spectrograms as input.
+
 ## 3.Methodology: 方法
 
 ## 4.Experiments: 实验
