--- a/Models/TTS3_Vocoder/2024.08.13_VNet.md
+++ b/Models/TTS3_Vocoder/2024.08.13_VNet.md
@@ -61,6 +61,73 @@ WaveGAN simplifies speech synthesis by directly generating raw audio waveforms, 
 
 ## 3.Methodology: 方法
 
+### 3.1.Generator
+
+The generator G, inspired by BigVGAN, is a fully convolutional neural network depicted in Fig. \ref{fig:1}(a). It takes a full-band Mel spectrogram as input and utilizes inverse convolution for upsampling until the output sequence length matches the target waveform map. Each deconvolution module is followed by an MRF module, which concurrently observes pattern features of varying lengths. The MRF module aggregates the outputs of multiple residual modules, each with different convolution kernel sizes and expansion coefficients, aimed at forming diverse perceptual field patterns.
+
+To efficiently capture localized information from the Mel spectrogram, we introduce Location Variable Convolution (LVC), enhancing sound quality and generation speed while maintaining model size \cite{c20}. The LVC layer's convolution kernel is obtained from the kernel predictor, with the Mel spectrogram serving as input and the predicted convolution kernel concatenated into a residual stack for each LVC layer separately. Through empirical experiments, we optimize the placement and number of LVC layers and the kernel predictor to achieve the desired sound quality and generation speed. To improve the model's adaptability to speaker feature variations and mitigate overfitting risks, we incorporate gated activation units (GAUs) \cite{c23}.
+
+## 3.2.Discriminator
+
+Discriminators play a crucial role in guiding the generator to produce high-quality, coherent waveforms while minimizing perceptual errors detectable by the human ear. State-of-the-art GAN-based vocoders typically incorporate multiple discriminators to guide coherent waveform generation while minimizing perceptual artifacts. Moreover, each discriminator comprises several sub-discriminators. As illustrated in Fig. \ref{fig:1}(b), our discriminator utilizes multiple spectrograms and reshaped waveforms computed from real or generated signals. Since speech signals contain sinusoidal signals with varying periods, we introduce the MPD to identify various periodic patterns in the audio data. MPD extracts periodic components from waveforms at prime intervals and utilizes them as inputs to each subsampler \cite{c14}. Additionally, to capture continuous patterns and long-term dependencies, we design and employ the MTD.
+
+MTD comprises three sub-discriminators operating at different input scales: raw audio, ×2 average pooled audio, and ×4 average pooled audio. Each sub-discriminator receives input from the same waveform through STFT using distinct parameter sets \cite{c11}. These parameter sets specify the number of points in the Fourier transform, frame-shift interval, and window length.
+
+Each sub-discriminator in MTD consists of stride and packetized convolutional layers with Leaky ReLU activation. The mesh size increases by reducing the step size and adding more layers. Spectral normalization stabilizes the training process, except for the first subframe, where weight normalization manipulates raw audio. This model architecture draws inspiration from Multi-Scale Waveform Diagrams (MSWDs) but diverges by utilizing MTD to incorporate multiple spectrograms with varying temporal and spectral resolutions, thereby generating high-resolution signals across the full frequency band.
+
+The VNet discriminator comprises two sub-modules: the MTD and the MPD, each containing multiple sub-discriminators utilizing 2D convolutional stacking, as depicted in Fig. \ref{fig:2}, MTD transforms the input 1D waveform into a 2D linear spectrogram by employing various downsampling average pooling multiples, followed by STFT with diverse parameters ([n\_fft, hop\_length, win\_length]). MPD converts the input 1D waveform of length T into a 2D waveform through reshaping and reflection filling (Reshape2d) with different widths (p) and heights (T /p).
+
+### 3.3.Training Loss
+
+The feature matching loss measures similarity in learning, quantifying the difference in sample features between ground truth and generated samples \cite{c24}. Given its successful application in speech synthesis, we employed it as an additional loss for training the generator. Each intermediate feature was extracted, and the Frobenius distance between ground truth and generated samples in each feature space was computed. Denoted as $L_{FM}$, the feature matching loss is defined as follows:
+$$
+L_{FM}(X,\hat{X})=\frac{1}{M}\sum_{m=1}^{M}E_{X,\hat{X}}[\frac{||S_m-\hat{S_m}||_F}{||S_m||_F}]\quad, \eqno{(1)}
+$$
+where$||\cdot||_F$denote the Frobenius norms and S denotes the number of elements in the spectrogram. Each m-th L$_{FM}$ reuse $S_m$ and $\hat{S_m}$ used in the m-th MTD sub-discriminator. The number of each loss is M, which is the same as the number of MTD sub-discriminators.
+
+
+We also introduced a log-Mel spectrogram loss to enhance the training efficiency of the generator and improve the fidelity of the generated audio. Drawing from previous work, incorporating reconstruction loss into the GAN model has been shown to yield realistic results \cite{c25}. We employed the Mel spectrogram loss based on input conditions, aiming to focus on improving perceptual quality given the characteristics of the human auditory system \cite{c26}. The Mel spectrogram loss is calculated as the L1 distance between the Mel spectrogram of the waveforms generated by the generator and the Mel spectrogram of the ground truth waveforms. Denoted as L$_{Mel}$, the Mel spectrogram loss is defined as follows:
+$$
+L_{Mel}(X,\hat{X})=\frac{1}{M}\sum_{m=1}^{M}E_{X,\hat{X}}[\frac{1}{S_m}]||logS_m-log\hat{S_m}||_1\quad, \eqno{(2)}
+$$
+where$||\cdot||_1$ denotes the L1 norms, and S denotes the number of elements in the spectrogram. Each m-th L$_{FM}$ reuse  $S_m$ and $\hat{S_m}$ used in the m-th MTD sub-discriminator. The number of each loss is M, which is the same as the number of MTD sub-discriminators.
+
+The objective of the vocoder is to train the generating function$G_\theta S\rightarrow X$, which transforms a Mel spectrogram $s\in S $ into a waveform signal $x\in X $. The adversarial losses of the generator and the discriminator are denoted as $L_{adv}(G; D)$ and $L_{adv}(D; G)$. The discriminant function $D: X \in R $ is typically implemented using a neural network, denoted by $\phi$, which comprises linear operations and nonlinear activation functions \cite{c27}. To simplify, we decompose the discriminator into a nonlinear function $h_\varphi:X \in W\subseteq R^D$ and a final linear layer $\omega \in W$, expressed as $D^W_\varphi (x)=W^Th_\varphi (x)$, where $\phi =[{\varphi,\omega}]$. The discriminative process can be interpreted as segmenting the nonlinear feature $h_\varphi (x)$ using a shared projection $\omega$. Thus, the adversarial loss of the generator and the discriminator can be expressed as follows:
+$$
+L_{adv}(D;G)=E_{PX}[R_1(D_\varphi^\omega(X))]+E_{PS}[R_2(D_\varphi^\omega(G_\theta(s))], \eqno{(3)}
+\label{Eq: 3}
+$$
+
+$$
+L_{adv}(G;D)=E_{PS}[R_3(D_\varphi^\omega(G_\theta(s)))], \eqno{(4)}
+$$
+
+$$
+R_1(z)=-(1-z)^2, R_2(z)=-z^2, R_3(z)=(1-z)^2, \eqno{(5)}
+$$
+
+$p_X (x)$ and $p_S (s)$ denote the waveform signal and Mel spectrogram, respectively. Through optimization of the maximization problem, a nonlinear function $h_\varphi$ is induced to differentiate between true and false samples and mapped onto the feature space W, resulting in a linear projection on W to enhance discrimination \cite{c28}. However, the linear projection $\omega$ in Eq. (3) may not fully utilize features for discrimination. We observe that given $h_\varphi$, there exist linear projections that offer more discriminative information than the projection $\omega$ maximizing Eq. (3). As long as $R_3$ (whose derivative is denoted $r_3$ ) is a monotonically decreasing function—meaning the derivative $r_3 (z)$ is negative for any $z \in R$. Thus, we propose the asymptotic constraint method to modify the adversarial loss function of the generator and the discriminator as follows:
+
+$$
+\begin{aligned}
+    L_{adv}(D;G) 
+    & = E_{PX}[R_1(D_\varphi^{\omega^-}(X))] + E_{PS}[R_2(D_\varphi^{\omega^-}(G_\theta(s)))] \nonumber \\
+    & \quad + E_{PX}[R_3(D_{\varphi^-}^\omega(X))] - E_{PS}[R_3(D_{\varphi^-}^\omega(G_\theta(s)))] \tag{6}, 
+    \label{Eq: 6}
+\end{aligned}
+$$
+
+$$
+    L_{adv}(G;D)=E_{PS}[R_3(D_\varphi^\omega(G_\theta(s)))], \eqno{(7)}
+$$
+
+$$
+    R_1(z)=-\sigma(1-z)^2, R_2(z)=-\sigma(z)^2, R_3(z)=\sigma(1-z)^2, \eqno{(8)}
+$$
+
+where $\sigma(\cdot)$ is the "asymptotic constraint", i.e., $\sigma(x)=e^{-(0.3x-2)}$. In our preliminary experiments, when utilizing Eq. (3) instead of Eq. (6), we observed unstable training, underscoring the significance of ensuring the monotonicity of $\hat{R_3}$. Particularly in the early stages of training, the loss values tended to converge to suboptimal local minima.
+
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
