--- a/Models/TTS3_Vocoder/2024.08.13_VNet.md
+++ b/Models/TTS3_Vocoder/2024.08.13_VNet.md
@@ -35,29 +35,30 @@
 
 ## Abstract: 摘要
 
-Since the introduction of Generative Adversarial Networks (GANs) in speech synthesis, remarkable achievements have been attained. In a thorough exploration of vocoders, it has been discovered that audio waveforms can be generated at speeds exceeding real-time while maintaining high fidelity, achieved through the utilization of GAN-based models. Typically, the inputs to the vocoder consist of band-limited spectral information, which inevitably sacrifices high-frequency details. To address this, we adopt the full-band Mel spectrogram information as input, aiming to provide the vocoder with the most comprehensive information possible.
-However, previous studies have revealed that the use of full-band spectral information as input can result in the issue of over-smoothing, compromising the naturalness of the synthesized speech. To tackle this challenge, we propose VNet, a GAN-based neural vocoder network that incorporates full-band spectral information and introduces a Multi-Tier Discriminator (MTD) comprising multiple sub-discriminators to generate high-resolution signals. Additionally, we introduce an asymptotically constrained method that modifies the adversarial loss of the generator and discriminator, enhancing the stability of the training process.
-Through rigorous experiments, we demonstrate that the VNet model is capable of generating high-fidelity speech and significantly improving the performance of the vocoder.
+> Since the introduction of Generative Adversarial Networks (GANs) in speech synthesis, remarkable achievements have been attained. In a thorough exploration of vocoders, it has been discovered that audio waveforms can be generated at speeds exceeding real-time while maintaining high fidelity, achieved through the utilization of GAN-based models. Typically, the inputs to the vocoder consist of band-limited spectral information, which inevitably sacrifices high-frequency details. To address this, we adopt the full-band Mel spectrogram information as input, aiming to provide the vocoder with the most comprehensive information possible.
+> However, previous studies have revealed that the use of full-band spectral information as input can result in the issue of over-smoothing, compromising the naturalness of the synthesized speech. To tackle this challenge, we propose ***VNet***, a GAN-based neural vocoder network that incorporates full-band spectral information and introduces a Multi-Tier Discriminator (MTD) comprising multiple sub-discriminators to generate high-resolution signals. Additionally, we introduce an asymptotically constrained method that modifies the adversarial loss of the generator and discriminator, enhancing the stability of the training process.
+> Through rigorous experiments, we demonstrate that the ***VNet*** model is capable of generating high-fidelity speech and significantly improving the performance of the vocoder.
 
 ## 1.Introduction: 引言
 
-Speech synthesis is crucial across various domains, including accessibility, education, entertainment, and customer service \cite{c1}. However, conventional systems often encounter challenges with timbre, speech rate variation, and vocal coherence \cite{c2,c3,c4}. Recent advancements in deep learning and neural network techniques have significantly improved the quality of speech synthesis \cite{c5,c6}. The neural network and deep learning-based speech synthesis now being introduced are broadly divided into two steps: 1) Acoustic modeling: taking characters (text) or phonemes as input and creating a model of the acoustic features. (The acoustic features used in most of the work are Mel Spectrograms); 2) Vocoder: a model that takes Mel Spectrograms (or similar spectrograms) as input and generates real audio \cite{c7}. As an important step in speech synthesis, the study of the vocoder has received extensive attention. This paper focuses on the vocoder part of the study. Vocoder models can be broadly categorized into autoregressive-based (e.g., WaveNet \cite{c8}, WaveRNN \cite{c9}), flow-based (e.g., WaveGlow \cite{c10}, Parallel WaveGAN \cite{c11}), GAN-based \cite{c12} (e.g., MelGAN \cite{c13}, HiFiGAN \cite{c14}, BigVGAN \cite{c15}) and diffusion model-based (e.g., WaveGrad \cite{c16}, Grad-tts \cite{c17}, FastDiff \cite{c18}, ProDiff \cite{c19}) approaches. These advancements promise more natural and coherent speech, enhancing user experience across various applications.
-
-GANs employ an adversarial training approach, where the generator and discriminator engage in a competitive process. This competition fosters improved generator performance and enhances the ability to generate features resembling real data, making GANs widely utilized in vocoder tasks. While the GAN-based generative model can synthesize high-fidelity audio waveforms faster than real-time, most vocoders operate on band-limited Mel spectrogram as input. For instance, HiFi-GAN utilizes band-limited Mel spectrograms as input. Other similar models include LVCNet \cite{c20}, StyleMelGAN \cite{c21} and WaveGlow \cite{c10}. However, speech signals generated with band-limited Mel spectrograms lack high-frequency information, leading to fidelity issues in the resulting waveforms. Thus, considering full-band Mel spectrogram information as vocoder input is crucial. Despite attempts by Parallel WaveGAN to use full-band Mel spectrograms, it faces challenges such as excessive smoothing, resulting in the generation of non-sharp spectrograms and unnatural speech output \cite{c11}.
-
-The loss function of a GAN typically encompasses both the generator and discriminator loss functions. However, various vocoder models employ distinct loss function designs and exhibit differences in the selection of similar loss terms, leading to training instability. For instance, Parallel WaveGAN incorporates cross-entropy loss into the generator loss to address instability issues, albeit without complete resolution \cite{c11}. MelGAN endeavors to enhance stability by replacing the cross-entropy loss with hinge loss and augmenting feature matching loss, yet gradient loss persists \cite{c13}. HiFiGAN introduces feature matching loss and Mel spectrogram loss to mitigate training instability \cite{c14}. Despite the inclusion of these additional loss functions, training may still encounter challenges such as gradient loss and pattern collapse, resulting in an unstable training process.
-
-This paper introduces VNet, a novel vocoder model capable of synthesizing high-fidelity speech in real time. A new discriminator module, named MTD, is proposed, which utilizes multiple linear spectrogram magnitudes computed with distinct sets of parameters. Operating on full-band Mel spectrogram data, MTD facilitates the generation of full-band and high-resolution signals. The overall discriminator integrates a Multi-Period Discriminator (MPD), leveraging multiple scales of waveforms to enhance speech synthesis performance by capturing both time and frequency domain characteristics \cite{c14}. To mitigate model training instability, an asymptotically constrained approach is proposed to modify the adversarial training loss function. This entails constraining the adversarial training loss within a defined range, ensuring stable training of the entire model. Our contributions can be summarized in three main aspects:
-
-- We propose VNet, a neural vocoder network for GAN-based speech synthesis that incorporates an MTD module to capture the features of speech signals from both time and frequency domains.
-- We propose an asymptotically constrained approach to modify the adversarial training loss of the generator and discriminator of the vocoder.
-- We demonstrate the effectiveness of the VNet model, as well as the effectiveness of the newly added MTD module and asymptotic constraints against training loss.
+> Speech synthesis is crucial across various domains, including accessibility, education, entertainment, and customer service \cite{c1}. However, conventional systems often encounter challenges with timbre, speech rate variation, and vocal coherence \cite{c2,c3,c4}. Recent advancements in deep learning and neural network techniques have significantly improved the quality of speech synthesis \cite{c5,c6}. The neural network and deep learning-based speech synthesis now being introduced are broadly divided into two steps: 1) Acoustic modeling: taking characters (text) or phonemes as input and creating a model of the acoustic features. (The acoustic features used in most of the work are Mel Spectrograms); 2) Vocoder: a model that takes Mel Spectrograms (or similar spectrograms) as input and generates real audio \cite{c7}. As an important step in speech synthesis, the study of the vocoder has received extensive attention. This paper focuses on the vocoder part of the study. Vocoder models can be broadly categorized into autoregressive-based (e.g., WaveNet \cite{c8}, WaveRNN \cite{c9}), flow-based (e.g., WaveGlow \cite{c10}, Parallel WaveGAN \cite{c11}), GAN-based \cite{c12} (e.g., MelGAN \cite{c13}, HiFiGAN \cite{c14}, BigVGAN \cite{c15}) and diffusion model-based (e.g., WaveGrad \cite{c16}, Grad-tts \cite{c17}, FastDiff \cite{c18}, ProDiff \cite{c19}) approaches. These advancements promise more natural and coherent speech, enhancing user experience across various applications.
+>
+> GANs employ an adversarial training approach, where the generator and discriminator engage in a competitive process. This competition fosters improved generator performance and enhances the ability to generate features resembling real data, making GANs widely utilized in vocoder tasks. While the GAN-based generative model can synthesize high-fidelity audio waveforms faster than real-time, most vocoders operate on band-limited Mel spectrogram as input. For instance, HiFi-GAN utilizes band-limited Mel spectrograms as input. Other similar models include LVCNet \cite{c20}, StyleMelGAN \cite{c21} and WaveGlow \cite{c10}. However, speech signals generated with band-limited Mel spectrograms lack high-frequency information, leading to fidelity issues in the resulting waveforms. Thus, considering full-band Mel spectrogram information as vocoder input is crucial. Despite attempts by Parallel WaveGAN to use full-band Mel spectrograms, it faces challenges such as excessive smoothing, resulting in the generation of non-sharp spectrograms and unnatural speech output \cite{c11}.
+>
+> The loss function of a GAN typically encompasses both the generator and discriminator loss functions. However, various vocoder models employ distinct loss function designs and exhibit differences in the selection of similar loss terms, leading to training instability. For instance, Parallel WaveGAN incorporates cross-entropy loss into the generator loss to address instability issues, albeit without complete resolution \cite{c11}. MelGAN endeavors to enhance stability by replacing the cross-entropy loss with hinge loss and augmenting feature matching loss, yet gradient loss persists \cite{c13}. HiFiGAN introduces feature matching loss and Mel spectrogram loss to mitigate training instability \cite{c14}. Despite the inclusion of these additional loss functions, training may still encounter challenges such as gradient loss and pattern collapse, resulting in an unstable training process.
+>
+> This paper introduces ***VNet***, a novel vocoder model capable of synthesizing high-fidelity speech in real time. A new discriminator module, named MTD, is proposed, which utilizes multiple linear spectrogram magnitudes computed with distinct sets of parameters. Operating on full-band Mel spectrogram data, MTD facilitates the generation of full-band and high-resolution signals. The overall discriminator integrates a Multi-Period Discriminator (MPD), leveraging multiple scales of waveforms to enhance speech synthesis performance by capturing both time and frequency domain characteristics \cite{c14}. To mitigate model training instability, an asymptotically constrained approach is proposed to modify the adversarial training loss function. This entails constraining the adversarial training loss within a defined range, ensuring stable training of the entire model. Our contributions can be summarized in three main aspects:
+>
+> - We propose ***VNet***, a neural vocoder network for GAN-based speech synthesis that incorporates an MTD module to capture the features of speech signals from both time and frequency domains.
+> - We propose an asymptotically constrained approach to modify the adversarial training loss of the generator and discriminator of the vocoder.
+> - We demonstrate the effectiveness of the ***VNet*** model, as well as the effectiveness of the newly added MTD module and asymptotic constraints against training loss.
 
 ## 2.Related Works: 相关工作
 
 GANs have emerged as powerful generative models \cite{c12}. Initially applied to image generation tasks, GANs have garnered significant success and attention. Similarly, in the domain of speech synthesis, where traditional approaches primarily rely on rule-based or statistical models, GAN technology has gradually gained traction. By leveraging the adversarial framework of GANs, speech synthesis models can better capture the complexity and realism of speech signals, thereby producing more natural, high-quality synthesized speech. 
 
-WaveGAN simplifies speech synthesis by directly generating raw audio waveforms, producing high-quality and naturalistic speech segments. However, its training requires substantial data and computational resources. In contrast, Parallel WaveGAN extends single short-time Fourier transform (STFT) loss to multi-resolution, integrating it as an auxiliary loss for GAN training\cite{c11}. It may suffer from excessive smoothing. MelGAN achieves high-quality synthesis without additional distortion or perceptual losses by introducing a multi-scale discriminator (MSD) and incorporating hinge loss, feature matching loss, and discriminator loss\cite{c13}. HiFiGAN enhances the discriminator's ability to differentiate between generated and real audio and introduces a multi-receptive field fusion (MRF) module in the generator. Its loss functions include least squares loss, feature matching loss, Mel spectrogram loss, and discriminator loss\cite{c14,c22}. BigVGAN builds upon HiFiGAN by replacing the MSD with a multi-resolution discriminator (MRD) and introducing periodic activation into the generator. It proposes an anti-aliasing multi-periodicity composition (AMP) module for modeling complex audio waveforms. BigVGAN's loss functions comprise least squares adversarial loss, feature matching loss, and Mel spectrogram loss\cite{c15}.VNet distinguishes itself from these methods by simultaneously addressing the challenges of matching features at various resolutions and scales while also resolving the issue of poor fidelity results that arise from using full-band Mel spectrograms as input.
+WaveGAN simplifies speech synthesis by directly generating raw audio waveforms, producing high-quality and naturalistic speech segments. However, its training requires substantial data and computational resources. In contrast, Parallel WaveGAN extends single short-time Fourier transform (STFT) loss to multi-resolution, integrating it as an auxiliary loss for GAN training\cite{c11}. It may suffer from excessive smoothing. MelGAN achieves high-quality synthesis without additional distortion or perceptual losses by introducing a multi-scale discriminator (MSD) and incorporating hinge loss, feature matching loss, and discriminator loss\cite{c13}. HiFiGAN enhances the discriminator's ability to differentiate between generated and real audio and introduces a multi-receptive field fusion (MRF) module in the generator. Its loss functions include least squares loss, feature matching loss, Mel spectrogram loss, and discriminator loss\cite{c14,c22}. BigVGAN builds upon HiFiGAN by replacing the MSD with a multi-resolution discriminator (MRD) and introducing periodic activation into the generator. It proposes an anti-aliasing multi-periodicity composition (AMP) module for modeling complex audio waveforms. BigVGAN's loss functions comprise least squares adversarial loss, feature matching loss, and Mel spectrogram loss\cite{c15}.
+***VNet*** distinguishes itself from these methods by simultaneously addressing the challenges of matching features at various resolutions and scales while also resolving the issue of poor fidelity results that arise from using full-band Mel spectrograms as input.
 
 ## 3.Methodology: 方法
 
@@ -75,7 +76,7 @@ MTD comprises three sub-discriminators operating at different input scales: raw 
 
 Each sub-discriminator in MTD consists of stride and packetized convolutional layers with Leaky ReLU activation. The mesh size increases by reducing the step size and adding more layers. Spectral normalization stabilizes the training process, except for the first subframe, where weight normalization manipulates raw audio. This model architecture draws inspiration from Multi-Scale Waveform Diagrams (MSWDs) but diverges by utilizing MTD to incorporate multiple spectrograms with varying temporal and spectral resolutions, thereby generating high-resolution signals across the full frequency band.
 
-The VNet discriminator comprises two sub-modules: the MTD and the MPD, each containing multiple sub-discriminators utilizing 2D convolutional stacking, as depicted in Fig. \ref{fig:2}, MTD transforms the input 1D waveform into a 2D linear spectrogram by employing various downsampling average pooling multiples, followed by STFT with diverse parameters ([n\_fft, hop\_length, win\_length]). MPD converts the input 1D waveform of length T into a 2D waveform through reshaping and reflection filling (Reshape2d) with different widths (p) and heights (T /p).
+The ***VNet*** discriminator comprises two sub-modules: the MTD and the MPD, each containing multiple sub-discriminators utilizing 2D convolutional stacking, as depicted in Fig. \ref{fig:2}, MTD transforms the input 1D waveform into a 2D linear spectrogram by employing various downsampling average pooling multiples, followed by STFT with diverse parameters ([n\_fft, hop\_length, win\_length]). MPD converts the input 1D waveform of length T into a 2D waveform through reshaping and reflection filling (Reshape2d) with different widths (p) and heights (T /p).
 
 ### 3.3.Training Loss
 
@@ -133,9 +134,7 @@ where $\sigma(\cdot)$ is the "asymptotic constraint", i.e., $\sigma(x)=e^{-(0.3x
 
 We validate the effectiveness of our method on the LibriTTS dataset, an English multi-speaker audiobook dataset comprising 585 hours of audio \cite{c29}. The training utilizes the LibriTTS training sets (train-clean-100, train-clean-360 and train-other-500). For text-to-speech evaluation, we fine-tune the vocabulary encoder using predicted log-mel spectrograms to minimize feature mismatches. Additionally, we employ the LJSpeech dataset\footnote{https://keithito.com/LJ-Speech-Dataset}, containing 24 hours of data and 13,000 utterances from English-speaking female speakers. All waveforms are sampled at a rate of 24 kHz.
 
-All models, including the baseline, are trained using a frequency range of [0, 12] kHz and 100-band logarithmic Mel spectrograms, consistent with recent studies on universal vocoders. STFT parameters are set as per previous work, with a 1024 FFT size, a 1024 Hann window, and a 256 hop size. Objective evaluation is conducted on a subset of LibriTTS dev-clean and dev-other. Following the formal implementation of VNet, evaluation involves 6\% randomly selected audio files from dev-clean and 8\% randomly selected audio files from dev-other. For this experiment, we utilized
-a server with 4 Tesla T4 GPUs, each with a 16GB memory capacity. The CPU
-used in the server is an Intel Xeon Gold 5218R.
+All models, including the baseline, are trained using a frequency range of [0, 12] kHz and 100-band logarithmic Mel spectrograms, consistent with recent studies on universal vocoders. STFT parameters are set as per previous work, with a 1024 FFT size, a 1024 Hann window, and a 256 hop size. Objective evaluation is conducted on a subset of LibriTTS dev-clean and dev-other. Following the formal implementation of ***VNet***, evaluation involves 6\% randomly selected audio files from dev-clean and 8\% randomly selected audio files from dev-other. For this experiment, we utilized a server with 4 Tesla T4 GPUs, each with a 16GB memory capacity. The CPU used in the server is an Intel Xeon Gold 5218R.
 
 ### 4.2.Evaluation Metrics
 
@@ -147,18 +146,18 @@ Additionally, Mean Opinion Score (MOS) tests are conducted on a combination of T
 
 ### 5.1.Comparison with existing models
 
-Table \ref{table1} presents the results, with Wave Glow and Parallel WaveGAN yielding lower scores than other models and VNet outperforming BigVGAN across all objective and subjective evaluations. While there's only a marginal enhancement in subjective scores compared to HiFi-GAN, VNet offers the advantage of generating results at approximately 1.5 times the speed for a similar number of parameters. Notably, Parallel WaveGAN exhibits over-smoothing issues, likely due to experiments with full-band features instead of band-limited features.
+Table \ref{table1} presents the results, with Wave Glow and Parallel WaveGAN yielding lower scores than other models and ***VNet*** outperforming BigVGAN across all objective and subjective evaluations. While there's only a marginal enhancement in subjective scores compared to HiFi-GAN, ***VNet*** offers the advantage of generating results at approximately 1.5 times the speed for a similar number of parameters. Notably, Parallel WaveGAN exhibits over-smoothing issues, likely due to experiments with full-band features instead of band-limited features.
 
 As depicted in Fig. \ref{fig:3}, PESQ only considers the [0, 8] kHz range, while MCD and M-STFT assess both this range and higher frequency bands, resulting in significantly improved MCD and M-STFT scores. MOS scores demonstrate a strong correlation with PESQ scores.
 
 ### 5.2.Ablation Study
 
-In order to further validate the significance of each component in our proposed model VNet, we conducted qualitative and quantitative analyses on the speech generated by the generator. We systematically removed specific key architectural components and evaluated the audio quality using a designated test set. Table \ref{table2} presents the average opinion scores of the audio quality assessed through human listening tests. Each model underwent training on the LJSpeech dataset for 400k iterations.
+In order to further validate the significance of each component in our proposed model ***VNet***, we conducted qualitative and quantitative analyses on the speech generated by the generator. We systematically removed specific key architectural components and evaluated the audio quality using a designated test set. Table \ref{table2} presents the average opinion scores of the audio quality assessed through human listening tests. Each model underwent training on the LJSpeech dataset for 400k iterations.
 
 Our analysis indicates that solely utilizing MPD without incorporating other discriminators leads to skipping certain segments of the sound, resulting in the loss of some words in the synthesized speech. Incorporating MSD alongside MPD improves the retention of words yet makes it challenging to capture sharp high-frequency patterns, resulting in samples that sound noisy. The addition of MRD to MPD further enhances word retention but introduces metallic artefacts in the audio, which are particularly noticeable during speaker breathing intervals.
 
 ## 6.Conclusions: 结论
 
-This study demonstrates the capabilities of the VNet model, a GAN-based vocoder, in enhancing speech synthesis. By utilizing full-band Mel spectrogram inputs, the model effectively addresses over-smoothing issues. Furthermore, the introduction of a Multi-Tier Discriminator (MTD) and refined adversarial loss functions has significantly improved speech quality and fidelity.
+This study demonstrates the capabilities of the ***VNet*** model, a GAN-based vocoder, in enhancing speech synthesis. By utilizing full-band Mel spectrogram inputs, the model effectively addresses over-smoothing issues. Furthermore, the introduction of a Multi-Tier Discriminator (MTD) and refined adversarial loss functions has significantly improved speech quality and fidelity.
 
 Future research should prioritize further reducing over-smoothing and exploring the model's potential in multilingual and diverse speech styles. Such advancements could greatly enhance the practical usability of GAN-based vocoders, resulting in more natural and expressive synthesized speech.
