--- a/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
+++ b/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
@@ -19,7 +19,7 @@
   - [ArXiv](https://arxiv.org/abs/2408.07547)
   - [DOI]()
   - [Github](https://github.com/sh-lee-prml/PeriodWave)
-  - [Demo]()
+  - [Demo](https://periodwave.github.io/demo/)
   - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
   - [开源](../../Tags/OpenSource.md)
@@ -27,7 +27,8 @@
 - 引用: ?
 - 被引: ?
 - 数据:
-  - ? 
+  - [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
+  - [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
 - 对比:
   - ?
 - 复现:
@@ -72,7 +73,36 @@
 
 ## 1.Introduction: 引言
 
+> Deep generative models have achieved significant success in high-fidelity waveform generation. In general, the neural waveform generation model which is called \textit{"Neural Vocoder"} transforms a low-resolution acoustic representation such as Mel-spectrogram or linguistic representations into a high-resolution waveform signal for regeneration learning \citep{tan2024regeneration}. Conventional neural vocoder models have been investigated for text-to-speech \citep{oord2016wavenet,shen2018natural,ren2019fastspeech,kim2020glow,jiang2024megatts} and voice conversion \citep{lee2021voicemixer,choi2021neural}. Furthermore, recent universal waveform generation models called \textit{"Universal Vocoder"} are getting more attention due to their various applicability in neural audio codec \citep{zeghidour2021soundstream,dfossez2023high,kumar2024high,ju2024naturalspeech}, audio generation \citep{kreuk2023audiogen,roman2023from,yang2023diffsound,huang2023make,pmlr-v202-liu23f}, and zero-shot voice cloning systems \citep{lee2022hierspeech,huang2022generspeech,wang2023neural,li2024styletts,le2024voicebox,kim2024p,shen2024naturalspeech} where models can generate high-fidelity waveform signal from the highly compressed representations beyond the traditional acoustic features, Mel-spectrogram. In addition, universal vocoder requires generalization in various out-of-distribution scenarios including unseen voice, instruments, and dynamic environments \citep{lee2023bigvgan,bak2023avocodo}. 
+>
+> Previously, generative adversarial networks (GAN) models dominated the waveform generation tasks by introducing various discriminators that can capture the different characters of waveform signals. MelGAN \citep{kumar2019melgan} used the multi-scale discriminator to capture different features from the different scales of waveform signal. HiFi-GAN \citep{kong2020hifi} introduced the multi-period discriminator to capture the different periodic patterns of the waveform signal. UnivNet \citep{jang21_interspeech} utilized the multi-resolution spectrogram discriminator that can reflect the spectral features of waveform signal. BigVGAN \citep{lee2023bigvgan} proposed the Snake activation function for the out-of-distribution modeling and scaled up the neural vocoder for universal waveform generation. Vocos \citep{siuzdak2024vocos} significantly improved the efficiency of the neural vocoder without upsampling the time-axis representation. Although GAN-based models can generate the high-fidelity waveform signal fast, GAN models possess three major limitations: 1) they should utilize a lot of discriminators to improve the audio quality, which increases training time; 2) this also requires hyper-parameter tuning to balance multiple loss terms; 3) they are vulnerable to train-inference mismatch scenarios such as two-state models, which induces metallic sound or hissing noise.
+>
+> Recently, the multi-band diffusion (MBD) model \citep{roman2023from} sheds light on the effectiveness of the diffusion model for high-resolution waveform modeling. Although previous diffusion-based waveform models \citep{kong2021diffwave,chen2021wavegrad} existed, they could not model the high-frequency information so the generated waveform only contains low-frequency information. Additionally, they still require a lot of iterative steps to generate high-fidelity waveform signals. To reduce this issue, PriorGrad \citep{lee2022priorgrad} introduced a data-driven prior and FastDiff \citep{ijcai2022p577} adopted an efficient structure and noise schedule predictor. However, they do not model the high-frequency information so these models only generate the low-frequency information well. 
+>
+> Above all, there is no generator architecture to reflect the natural periodic features of high-resolution waveform signals. In this paper, we propose PeriodWave, a novel waveform generation model that can reflect different implicit periodic representations. We also adopt the powerful generative model, flow matching that can estimate the vector fields directly using the optimal transport path for fast sampling. Additionally, we utilize a multi-period estimator by adopting the prime number to avoid overlaps. We observed that increasing the number of periods can improve the entire performance consistently. However, this also induces a slow inference speed. To simply reduce this limitation, we propose a period-conditional universal estimator that can feed-forward parallel by period-wise batch inference. Furthermore, we utilize a discrete wavelet transformation (DWT) \citep{lee2022fre} for frequency-wise waveform modeling that can efficiently model the low and high-frequency information, respectively. 
+>
+> PeriodWave achieves a better performance in objective and subjective metrics than other publicly available strong baselines on both speech and out-of-distribution samples. Specifically, the experimental results demonstrated that our methods can significantly improve the pitch-related metrics including pitch distance, periodicity, and V/UV F1 score with unprecedented performance. Furthermore, we only train the models for only three days while previous GAN models require over three weeks.
+>
+> The main contributions of this study are as follows:
+> - We propose PeriodWave, a novel universal waveform generator that can reflect different implicit periodic information when estimating the vector fields.
+> - This is the first success utilizing flow matching for waveform-level high-resolution signal modeling, and we thoroughly analyze different ODE methods for waveform generation.
+> - For efficient and fast inference, we propose a period-conditional universal estimator that can feed-forward the multiple period paths parallel by period-wise batch inference.
+> - We analyze the limitation of high-frequency modeling for flow matching-based waveform generation. To reduce this issue, we adopt the DWT for more accurate frequency-wise vector field estimation and FreeU approach for high-frequency noise reduction.
+> - We will release all source code and checkpoints at [Github](https://github.com/sh-lee-prml/PeriodWave).
+
 ## 2.Related Works: 相关工作
+
+### Neural Vocoder
+
+> WaveNet \citep{oord2016wavenet} has successfully paved the way for high-quality neural waveform generation tasks. However, these auto-regressive (AR) models suffer from a slow inference speed. To address this limitation, teacher-student distillation-based inverse AR flow methods \citep{oord2018parallel,ping2018clarinet} have been investigated for parallel waveform generation. Flow-based models \citep{kim2019flowavenet,prenger2019waveglow,lee2020nanoflow} have also been utilized, which can be trained by simply maximizing the likelihood of the data using invertible transformation.
+
+### GAN-based Neural Vocoder
+
+> MelGAN \citep{kumar2019melgan} successfully incorporated generative adversarial networks (GAN) into the neural vocoder by introducing a multi-scale discriminator to reflect different features from the different scales of waveform signal and feature matching loss for stable training. Parallel WaveGAN \citep{yamamoto2020parallel} introduces multi-resolution STFT losses that can improve the perceptual quality and robustness of adversarial training. GAN-TTS \citep{Bińkowski2020High} utilized an ensemble of random window discriminators that operate on random segments of waveform signal. GED \citep{gritsenko2020spectral} proposed a spectral energy distance with unconditional GAN for stable and consistent training. HiFi-GAN \citep{kong2020hifi} introduced a novel discriminator, a multi-period discriminator (MPD) that can capture different periodic features of waveform signal. UnivNet \citep{jang21_interspeech} employed adversarial feedback on the multi-resolution spectrogram to capture the spectral representations at different resolutions. BigVGAN \citep{lee2023bigvgan} adopted periodic activation function and anti-aliased representation into the generator for generalization on out-of-distribution samples. Vocos \citep{siuzdak2024vocos} proposed an efficient waveform generation framework using ConvNeXt blocks and iSTFT head without any temporal domain upsampling. Meanwhile, neural codec models \citep{zeghidour2021soundstream,dfossez2023high,kumar2024high} and applications \citep{wang2023neural,yang2023uniaudio} such as TTS and audio generation have been investigated together with the development of neural vocoder.
+
+### Diffusion-based Neural Vocoder
+
+> DiffWave \citep{kong2021diffwave} and WaveGrad \citep{chen2021wavegrad} introduced a Mel-conditional diffusion-based neural vocoder that can estimate the gradients of the data density. PriorGrad \citep{lee2022priorgrad} improves the efficiency of the conditional diffusion model by adopting a data-dependent prior distribution for diffusion models instead of a standard Gaussian distribution. FastDiff \citep{ijcai2022p577} proposed a fast conditional diffusion model by adopting an efficient generator structure and noise schedule predictor. Multi-band Diffusion \citep{roman2023from} incorporated multi-band waveform modeling into diffusion models and it significantly improved the performance by band-wise modeling because previous diffusion methods could not model high-frequency information, which only generated the low-frequency representations. This model also focused on raw waveform generation from discrete tokens of neural codec model for various audio generation applications including speech, music, and environmental sound.
 
 ## 3.Methodology: 方法
 
