Update PeriodWave Sec6

--- a/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
+++ b/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
@@ -111,3 +111,19 @@
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+> In this work, we proposed PeriodWave, a novel universal waveform generation model with conditional flow matching. Motivated by the multiple periodic characteristics of high-resolution waveform signals, we introduce the period-aware flow matching estimators which can reflect different implicit periodic representations when estimating vector fields. Furthermore, we observed that increasing the number of periods can improve the performance, and we introduce a period-conditional universal estimator for efficient structure. By adopting this, we also implement a period-wise batch inference for efficient inference. The experimental results demonstrate the superiority of our model in high-quality waveform generation and OOD robustness. GAN-based models still hold great potential and have shown strong performance but require multiple loss functions, resulting in complex training and long training times. On the other hand, we introduced a new flow matching based approach using a single loss function, which offers a notable advantage. Furthermore, we see that the pre-trained flow matching generator could be utilized as a teacher model for distillation or fine-tuning. We hope that our approach will facilitate the study of waveform generation by reducing training time, so we will release all source code and checkpoints. 
+
+### Broader Impact and Limitation
+
+#### Practical Application
+
+> We first introduce a high-fidelity waveform generation model using flow matching. We demonstrated the out-of-distribution robustness of our model, and this means that the conventional neural vocoder can be replaced with our model. We see that our models can be utilized for text-to-speech, voice conversion, audio generation, and speech language models for high-quality waveform decoding. For future work, we will train and release Codec-based PeriodWave for audio generation and speech language models. 
+
+#### Social Negative Impact
+
+> Recently, speech AI technology has shown its practical applicability by synthesizing much more realistic audio. Unfortunately, this also increases the risk of the potential social negative impact including malicious use and ethical issues by deceiving people. It is important to discuss a countermeasure that can address these potential negative impacts such as fake audio detection, anti-spoofing techniques, and audio watermark generation.
+
+#### Limitation
+
+> Although our models could generate the waveform with small sampling steps, Table \ref{appendix:inferencespeed} shows that our models have a slow synthesis speed compared to GAN-based neural vocoder. To overcome this issue, we will explore distillation methods or adversarial training to reduce the sampling steps for much more fast inference by using our period-aware structure. Additionally, our models still show a lack of robustness in terms of high-frequency information because we only train the model by estimating the vector fields on the waveform resolution. Although we utilize multi-band modeling to reduce this issue, we have a plan to add a modified spectral objective function and blocks that can reflect the spectral representations when estimating vector fields by utilizing short-time Fourier convolution proposed in \citep{han22_interspeech} for audio super-resolution. Moreover, we see that classifier-free guidance could be adapted to our model to improve the audio quality.
