--- a/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
+++ b/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
@@ -221,7 +221,7 @@ $$
 > Due to the misalignment of the vocoder's output with the target at the sample level, metrics like Si-SNR can be degraded.
 > Therefore, we use the [deep noise suppression mean opinion score (DNSMOS)](../../Evaluations/DNSMOS.md) for the speech quality metric, following a previous study ([SELM](../_tmp/SELM.md)).
 > Intelligibility is evaluated through the [differential word error rate (dWER)](../../Evaluations/dWER.md), which measures the WER between the transcribed enhanced signal and the transcribed target signal.
-> Transcriptions are obtained using the small version of [Whisper](../Speech_LLM/Whisper.md).
+> Transcriptions are obtained using the small version of [Whisper](../Speech_LLM/2022.12.06_Whisper.md).
 
 #### Text-to-Speech (TTS)
 
@@ -231,7 +231,7 @@ $$
 > We utilize a shared transformer decoder, where each tokenizer head has its own learned embedding, and there is a distinct final linear layer for each token.
 > We train all models on the [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) dataset.
 > For assessing speech quality, we use [UTMOS](../../Evaluations/UTMOS.md) to estimate human quality ratings.
-> To evaluate fidelity to the text, we assess generated samples using the WER computed with the small version of [Whisper](../Speech_LLM/Whisper.md).
+> To evaluate fidelity to the text, we assess generated samples using the WER computed with the small version of [Whisper](../Speech_LLM/2022.12.06_Whisper.md).
 
 ## 5.Results: 结果
 
