--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -634,7 +634,7 @@ $$
 
 > **TTS capability evaluation.** 
 > We evaluate whether the speech generation capability is affected by the full duplex modeling in the proposed ***LSLM***. 
-> The word error rate (WER) comparing the generated speech to the original text is considered as the TTS capability evaluation metrics using [Whisper [30]](Whisper.md) [large v3](https://github.com/openai/whisper). 
+> The word error rate (WER) comparing the generated speech to the original text is considered as the TTS capability evaluation metrics using [Whisper [30]](2022.12.06_Whisper.md) [large v3](https://github.com/openai/whisper). 
 >
 > **Interactive capability evaluation.** 
 > Interactivity capability evaluation aims to measure how well the proposed ***LSLM*** responds to real-time and unpredictable input from the listening channel. 
@@ -648,7 +648,7 @@ $$
 
 **文本转语音能力评估**
 我们评估了 ***LSLM*** 中全双工建模是否影响了语音生成能力.
-使用 [Whisper [30]](Whisper.md) [large v3](https://github.com/openai/whisper) 计算生成语音与原始文本之间的词错误率 (WER) 作为 TTS 能力评估指标.
+使用 [Whisper [30]](2022.12.06_Whisper.md) [large v3](https://github.com/openai/whisper) 计算生成语音与原始文本之间的词错误率 (WER) 作为 TTS 能力评估指标.
 
 **交互能力评估**
 交互能力评估旨在衡量 ***LSLM*** 对听觉通道中实时和不可预测的输入的响应能力.
